2008-02-20  John W. Eaton  <jwe@octave.org>

	* strings/strcat.m: Detect cellstr args.

2008-02-20  David Bateman  <dbateman@free.fr>

	* sparse/colperm.m, sparse/nonzero.m, sparse/spdiags.m,
	sparse/spfun.m, sparse/spones.m, sparse/sprand.m,
	sparse/sprandn.m, sparse/sprandsym.m, sparse/spy.m: Use generic
	version of find rather than spfind.

2008-02-19  Ben Abbott  <bpabbott@mac.com>

	* miscellaneous/edit.m: New option EDITINPLACE.  Prefer file list
	rather than path list.  Return option structure with "get all".

	* polynomial/polyfit.m: Use QR decomposition.  Handle
	normalization option.
	* polynomial/polyval.m: Normalize dependent variable.  Optionally
	generate 50% prediction intervals.

	* miscellaneous/ver.m: Include package version information in
	output.  Improve consistency with Matlab.

2008-02-19  John W. Eaton  <jwe@octave.org>

	* pkg/pkg.m: Style fixes.

2008-02-19 Carlo de Falco <carlo.defalco@gmail.com>

	* pkg/pkg.m: Handle 'describe' command.
	(parse_pkg_idx, print_package_description): New subfunctions.
	
2008-02-19  Bill Denney  <bill@denney.ws>

	* time/datestr.m: Avoid confusion for datenum vectors that are 6
	elements wide.

2008-02-18  David Bateman  <dbateman@free.fr>

	* general/rem.m, general/mod.m: Treat integer types correctly.

2008-02-15  Timo Lindfors  <timo.lindfors@iki.fi>

	* statistics/tests/kruskal_wallis_test.m: Handle ties.
	* general/runlength.m: New function from Paul Kienzle.

2008-02-15  Rolf Fabian  <r.fabian@jacobs-university.de>

	* linear-algebra/cond.m: New optional second argument to
	specify 1-norm, inf-norm, or frobenius-norm. 

2008-02-12  Kostas Poulios  <poulios.konstantinos@googlemail.com>

	* plot/__quiver__.m: make arrow head be in z-plane of the arrow
	body. Allow the linespec to specify the arrow color.

2008-02-12  David Bateman  <dbateman@free.fr>

	* miscellaneous/cast.m: Also treat the logical type.

	* plot/__go_draw_axes__.m: Set pm3d implict to fix colorbars on
	contour plots.
